rename tile canvas and fix gap issue

--- a/src/TilesTool/TilesTool.css
+++ b/src/TilesTool/TilesTool.css
@@ -6,5 +6,6 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  align-content: center;
   gap: 10px;
 }
